<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_BufferStorageState" Id="{f2f0531e-3113-45bb-ac80-07f020a4dd38}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA.StructuredType' := '1'}
TYPE ST_BufferStorageState :
STRUCT
	fUpperTemperature : REAL;
	fLowerTemperature : REAL;
	sTemperatureUnit : STRING := 'degreeC';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>